// Copyright 2021-Present Datadog, Inc.
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//     http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

syntax = "proto3";

package quickwit.indexing;

import "quickwit/common.proto";
import "quickwit/ingest.proto";

service IndexingService {
  // Apply an indexing plan on the node.
  rpc ApplyIndexingPlan(ApplyIndexingPlanRequest) returns (ApplyIndexingPlanResponse);
}

message ApplyIndexingPlanRequest {
  repeated IndexingTask indexing_tasks = 1;
}

message PipelineUid {
  bytes pipeline_uid = 1;
}

message IndexingTask {
  // The tasks's index UID.
  quickwit.common.IndexUid index_uid = 1;
  // The task's source ID.
  string source_id = 2;
  // pipeline id
  PipelineUid pipeline_uid = 4;
  // The shards assigned to the indexer.
  repeated quickwit.ingest.ShardId shard_ids = 3;
  // Fingerprint of the pipeline parameters. Anything that should cause a pipeline restart (such
  // as updating indexing settings, the doc mapping or the source) should influence this value.
  uint64 params_fingerprint = 6;
}

message ApplyIndexingPlanResponse {}
